erDiagram
    PROJECTS ||--o{ WORKERS : "owns exclusively (workers.project_id, nullable — NULL = general pool)"
    PROJECTS ||--o{ HOSTS : "owns exclusively (hosts.project_id, nullable — NULL = general pool)"
    PROJECTS ||--o{ TASKS : "scopes (optional)"
    HOSTS |o--o| WORKERS : "worker_id (existing) — invariant: worker.project_id must match host.project_id when linked"

    PROJECTS {
        uuid id PK
        text name UK
        text description
        text created_by
        text agent_provisioning_mode "manual | automatic — #49"
        uuid default_agent_template_id "nullable, no FK yet — #49 adds the agent_templates FK in its Phase 1 (2026-08-14 3차 개정, forward-ref fix)"
        integer agent_idle_timeout_secs "nullable — #49, auto-teardown for automatic-mode agents"
        text workdir_template "nullable — #49 §9, default artifact directory (2026-08-14 3차 개정 추가)"
        timestamptz created_at
        timestamptz updated_at
    }

    WORKERS {
        uuid id PK
        text name UK
        text endpoint
        text status
        uuid project_id FK "nullable, exclusive — 2026-08-14 2차 개정: M:N project_workers 조인 테이블을 대체"
    }

    HOSTS {
        uuid id PK
        text hostname UK
        uuid worker_id FK "nullable, existing"
        uuid project_id FK "nullable, exclusive — 2026-08-14 2차 개정: M:N project_hosts 조인 테이블을 대체"
    }

    TASKS {
        uuid id PK
        uuid project_id FK "nullable, #48에서 이미 도입"
    }
